# zig

./: .README.md.swp  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  setup-backup.py  setup.cfg  setup.py
acceptance_tests/: setup.py  test_basic_interactions.py  test_graph_interactions.py  test_interactions.py  test_interactions_angular.py  test_interactions_angular_basic2.py  test_run.py  test_run_dom_creation.py  test_run_nested.py  test_run_plotly.py
documentation/: .pseudo.py.swp  Scrum.rtf  TO-DO.rtf  Zig PM.rtf  avail_html_tags.rtf  design questions.rtf  pseudo.py  pseudo2.py
src/zig/: __init__.py  attribute.py  config.py  container.py  defaults.py  element.py  exceptions.py  id_registry.py  section.py  utilities.py  zig.py
src/zig/assets/: index.html  main.js  main.js.map  polyfills.js  vendor.js  vendor.js.map
src/zig/html_components/: __init__.py  div.py  input.py  p.py
src/zig/interact/: __init__.py  interact.py  interact_in.py  interact_out.py
src/zig/main_components/: __init__.py  graph.py
src/zig/templates/: index.html  index_flask.html
tests/: ___init__.py  _test_run.py  conftest.py  test structure.rtf
tests/integration/: .browsers.py.swp  .composite.py.swp  .runner2.py.swp  .test_api_interaction.py.swp  _test_creation.py  browsers.ccd  browsers.py  composite.py  conftest.py  runner.py  runner2.py  test_api_interaction.py  test_interaction.py
tests/unit/: ___init__ .py  _test_container.py  _test_zig.py  test_dom_elements.py  test_html_elements.py  test_interact.py  test_zig.py
(+2 files in other folders)
