[metadata]
name = Zig 
version = 0.0.1

[options]
packages = find:
package_dir = = src 


[flake8]

# F = pyflake
# E = pycodestyle errors
# W = pycodestyle warnings 
# C90 = max complexity
# B = bugbear
# B9 = bugbear opinions
select = F, E, W, B, B9, C90
ignore =  
    # line length, handled dynamically by bugbear B950
    E501
    # white space around slice operator, replaced by Black
    E203
    # binary operator line break, replaced by Black
    W503   
 
max-line-length = 88

per-file-ignores = 
    # import without use
    __init__.py: F401
    
